--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.11.9",
+    "mongodb": "^6.11.0",
     "mongoose": "^8.7.2",
     "next": "14.2.10",
     "react": "^18",
