--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.3",
     "framer-motion": "^11.11.9",
     "mongodb": "^6.11.0",
     "mongoose": "^8.7.2",
